--- a/QL_Cafe/src/Interface/BanHang/hoadonReport.jrxml
+++ b/QL_Cafe/src/Interface/BanHang/hoadonReport.jrxml
@@ -5,26 +5,25 @@
 	<property name="ireport.y" value="0"/>
 	<queryString>
 		<![CDATA[SELECT
-     hoadon.`MaHoaDon` AS hoadon_MaHoaDon,
      hoadon.`GiamGia` AS hoadon_GiamGia,
-     hoadon.`MaBan` AS hoadon_MaBan,
      hoadon.`GioDen` AS hoadon_GioDen,
      hoadon.`TongTien` AS hoadon_TongTien,
      taikhoan.`fullname` AS taikhoan_fullname,
      thucdon.`TenMon` AS thucdon_TenMon,
      chitiethd.`SoLuong` AS chitiethd_SoLuong,
      chitiethd.`MaChiTietHD` AS chitiethd_MaChiTietHD,
-     hoadon.`MaTK` AS taikhoan_MaTK
+     hoadon.`MaTK` AS taikhoan_MaTK,
+     hoadon.`MaHoaDon` AS hoadon_MaHoaDon,
+     ban.`TenBan` AS ban_TenBan
 FROM
      `taikhoan` taikhoan INNER JOIN `hoadon` hoadon ON taikhoan.`id` = hoadon.`MaTK`
      INNER JOIN `chitiethd` chitiethd ON hoadon.`MaHoaDon` = chitiethd.`MaHoaDon`
+     INNER JOIN `ban` ban ON hoadon.`MaBan` = ban.`MaBan`
      INNER JOIN `thucdon` thucdon ON chitiethd.`MaMon` = thucdon.`MaMon`
 WHERE
      hoadon.MaHoaDon = ( SELECT MAX(MaHoaDon) FROM `hoadon` )]]>
 	</queryString>
-	<field name="hoadon_MaHoaDon" class="java.lang.Integer"/>
 	<field name="hoadon_GiamGia" class="java.lang.Integer"/>
-	<field name="hoadon_MaBan" class="java.lang.Integer"/>
 	<field name="hoadon_GioDen" class="java.sql.Timestamp"/>
 	<field name="hoadon_TongTien" class="java.lang.Integer"/>
 	<field name="taikhoan_fullname" class="java.lang.String"/>
@@ -32,6 +31,8 @@ WHERE
 	<field name="chitiethd_SoLuong" class="java.lang.Integer"/>
 	<field name="chitiethd_MaChiTietHD" class="java.lang.Integer"/>
 	<field name="taikhoan_MaTK" class="java.lang.Integer"/>
+	<field name="hoadon_MaHoaDon" class="java.lang.Integer"/>
+	<field name="ban_TenBan" class="java.lang.String"/>
 	<background>
 		<band splitType="Stretch"/>
 	</background>
@@ -54,58 +55,9 @@ WHERE
 		</band>
 	</title>
 	<detail>
-		<band height="312" splitType="Stretch">
+		<band height="411" splitType="Stretch">
 			<staticText>
-				<reportElement x="116" y="53" width="112" height="34" uuid="d5e5f03f-fba8-4b83-8215-3088f540d8aa"/>
-				<textElement>
-					<font size="16" isBold="true"/>
-				</textElement>
-				<text><![CDATA[Mã Hóa Đơn :]]></text>
-			</staticText>
-			<textField>
-				<reportElement x="261" y="53" width="100" height="34" uuid="8443b6fd-36bc-4ef9-b07c-914d2e63b1f5"/>
-				<textElement>
-					<font size="16" isItalic="true"/>
-				</textElement>
-				<textFieldExpression><![CDATA[$F{hoadon_MaHoaDon}]]></textFieldExpression>
-			</textField>
-			<staticText>
-				<reportElement x="116" y="87" width="112" height="32" uuid="b84709c6-3b4a-435b-b4dd-6972f85db034"/>
-				<textElement>
-					<font size="16" isBold="true"/>
-				</textElement>
-				<text><![CDATA[ Người Bán :]]></text>
-			</staticText>
-			<textField>
-				<reportElement x="261" y="87" width="28" height="32" uuid="3ba6e3a2-7b9f-487e-a876-c412871ffe0c"/>
-				<textElement textAlignment="Center">
-					<font size="16" isItalic="true"/>
-				</textElement>
-				<textFieldExpression><![CDATA[$F{taikhoan_MaTK}]]></textFieldExpression>
-			</textField>
-			<textField>
-				<reportElement x="299" y="87" width="171" height="32" uuid="bb6d725f-42ee-41f2-8c65-472021efa9b0"/>
-				<textElement>
-					<font size="16" isItalic="true"/>
-				</textElement>
-				<textFieldExpression><![CDATA[$F{taikhoan_fullname}]]></textFieldExpression>
-			</textField>
-			<staticText>
-				<reportElement x="116" y="119" width="112" height="30" uuid="ff8c15c3-ad52-43b8-b196-d19987e34239"/>
-				<textElement>
-					<font size="16" isBold="true"/>
-				</textElement>
-				<text><![CDATA[Giờ Đến :]]></text>
-			</staticText>
-			<textField>
-				<reportElement x="261" y="119" width="100" height="30" uuid="101f3107-1776-4a2c-805b-25e1826660da"/>
-				<textElement>
-					<font size="16" isItalic="true"/>
-				</textElement>
-				<textFieldExpression><![CDATA[$F{hoadon_GioDen}]]></textFieldExpression>
-			</textField>
-			<staticText>
-				<reportElement x="99" y="148" width="112" height="35" uuid="4ef6cd1b-ad1b-4bcc-bb63-1c1162389c6d"/>
+				<reportElement x="100" y="154" width="112" height="35" uuid="4ef6cd1b-ad1b-4bcc-bb63-1c1162389c6d"/>
 				<box>
 					<pen lineWidth="0.0"/>
 					<topPen lineWidth="0.0"/>
@@ -119,7 +71,7 @@ WHERE
 				<text><![CDATA[Tên Món]]></text>
 			</staticText>
 			<textField>
-				<reportElement x="99" y="183" width="112" height="35" uuid="f4a2466c-1eee-4dd6-ad52-65b750f6bec8"/>
+				<reportElement x="100" y="189" width="112" height="35" uuid="f4a2466c-1eee-4dd6-ad52-65b750f6bec8"/>
 				<box>
 					<pen lineWidth="0.0"/>
 					<topPen lineWidth="0.0"/>
@@ -200,7 +152,7 @@ WHERE
 				<textElement textAlignment="Center">
 					<font size="16" isItalic="true"/>
 				</textElement>
-				<textFieldExpression><![CDATA[$F{hoadon_MaBan}]]></textFieldExpression>
+				<textFieldExpression><![CDATA[$F{ban_TenBan}]]></textFieldExpression>
 			</textField>
 			<staticText>
 				<reportElement x="116" y="254" width="112" height="30" uuid="5d0869c6-5d0f-46e5-8677-e846f4812cc0"/>
@@ -215,6 +167,67 @@ WHERE
 					<font size="16" isItalic="true"/>
 				</textElement>
 				<textFieldExpression><![CDATA[$F{hoadon_TongTien}]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement x="100" y="315" width="413" height="20" uuid="dfe227f8-3aff-48c1-a42f-0682642d02c0"/>
+				<textElement textAlignment="Center"/>
+				<text><![CDATA[--------------------------------------------------------------------------------------------------------------------------]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="273" y="346" width="251" height="20" uuid="54775dee-5b46-4ae5-992f-2bb56cab4769"/>
+				<textElement>
+					<font size="14" isBold="true"/>
+				</textElement>
+				<text><![CDATA[Cảm ơn và  hẹn gặp lại quý khách]]></text>
+			</staticText>
+			<staticText>
+				<reportElement x="116" y="53" width="112" height="34" uuid="d5e5f03f-fba8-4b83-8215-3088f540d8aa"/>
+				<textElement>
+					<font size="16" isBold="true"/>
+				</textElement>
+				<text><![CDATA[Mã Hóa Đơn :]]></text>
+			</staticText>
+			<textField>
+				<reportElement x="261" y="53" width="100" height="34" uuid="8443b6fd-36bc-4ef9-b07c-914d2e63b1f5"/>
+				<textElement>
+					<font size="16" isItalic="true"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{hoadon_MaHoaDon}]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement x="116" y="87" width="112" height="32" uuid="b84709c6-3b4a-435b-b4dd-6972f85db034"/>
+				<textElement>
+					<font size="16" isBold="true"/>
+				</textElement>
+				<text><![CDATA[ Người Bán :]]></text>
+			</staticText>
+			<textField>
+				<reportElement x="261" y="87" width="28" height="32" uuid="3ba6e3a2-7b9f-487e-a876-c412871ffe0c"/>
+				<textElement textAlignment="Center">
+					<font size="16" isItalic="true"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{taikhoan_MaTK}]]></textFieldExpression>
+			</textField>
+			<textField>
+				<reportElement x="299" y="87" width="171" height="32" uuid="bb6d725f-42ee-41f2-8c65-472021efa9b0"/>
+				<textElement>
+					<font size="16" isItalic="true"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{taikhoan_fullname}]]></textFieldExpression>
+			</textField>
+			<staticText>
+				<reportElement x="116" y="119" width="112" height="30" uuid="ff8c15c3-ad52-43b8-b196-d19987e34239"/>
+				<textElement>
+					<font size="16" isBold="true"/>
+				</textElement>
+				<text><![CDATA[Giờ Đến :]]></text>
+			</staticText>
+			<textField>
+				<reportElement x="261" y="119" width="100" height="30" uuid="101f3107-1776-4a2c-805b-25e1826660da"/>
+				<textElement>
+					<font size="16" isItalic="true"/>
+				</textElement>
+				<textFieldExpression><![CDATA[$F{hoadon_GioDen}]]></textFieldExpression>
 			</textField>
 			<textField>
 				<reportElement x="273" y="17" width="144" height="36" uuid="eb4a5dfa-0a52-4d3c-aa60-3b833039488f"/>
